--- a/kr/index.html
+++ b/kr/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="./dist/styles.css" rel="stylesheet">
+    <link href="../dist/styles.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <style>
@@ -64,7 +64,7 @@
 <body class="bg-[#1F1F1F] text-white">
     <!-- Hero Section -->
     <section class="relative w-full min-h-screen flex items-center justify-center overflow-hidden bg-[#1F1F1F]">
-        <div class="absolute inset-0" style="background-image: url('./images/new_web_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
+        <div class="absolute inset-0" style="background-image: url('../images/new_web_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
         
         <!-- Language Selector -->
         <div class="language-selector">
@@ -80,23 +80,23 @@
         
         <div class="relative z-20 text-center px-4">
             <h1 class="text-5xl md:text-7xl font-bold mb-6">
-                <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-4 md:h-6 mx-auto" style="height:4rem;max-width:auto;">
+                <img src="../images/RILO_Logo_TYPO.png" alt="RILO" class="h-4 md:h-6 mx-auto" style="height:4rem;max-width:auto;">
             </h1>
             <p class="text-sm md:text-xl mb-8 text-gray-200 font-light">
                 Remember It, Log It!
             </p>
-            <div class="flex justify-center" style="gap: 80px;">
+            <div class="flex justify-center" style="gap: 40px;">
                 <a href="#" class="bg-white/10 hover:bg-gray-800/20 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
                     <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.08 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 7.5c-.03-2.17 1.73-3.14 1.81-3.2.99-1.49 2.65-2.44 4.03-2.47.17 1.71-.47 3.46-1.5 4.59-.95 1.05-2.02 1.76-3.04 1.72-.15-1.15.45-2.35 1.7-3.64z"/>
                     </svg>
-                    App Store 다운로드
+                    App Store
                 </a>
                 <a href="#" class="bg-white/10 hover:bg-gray-800/20 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
                     <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M3 3v18l18-9z"/>
                     </svg>
-                    Google Play 다운로드
+                    Google Play
                 </a>
             </div>
         </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="./images/feature-log-detail.png" alt="Discovery Feature" class="feature-image object-contain">
+                        <img src="../images/feature-log-detail.png" alt="Discovery Feature" class="feature-image object-contain">
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1 relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="./images/feature-spot-detail.png" alt="Chat Feature" class="feature-image object-contain">
+                        <img src="../images/feature-spot-detail.png" alt="Chat Feature" class="feature-image object-contain">
                     </div>
                 </div>
                 <div class="order-1 md:order-2 flex flex-col items-start">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="./images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
+                            <img src="../images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                 <div class="grid md:grid-cols-2 gap-8 items-center py-8">
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="./images/feature-camera-view.png" alt="Remember Feature" class="feature-image object-contain">
+                            <img src="../images/feature-camera-view.png" alt="Remember Feature" class="feature-image object-contain">
                         </div>
                     </div>
                     <div class="flex items-center">
@@ -214,7 +214,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div>
                     <h3 class="text-2xl font-bold mb-4">
-                        <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
+                        <img src="../images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
                     </h3>
                     <p class="text-gray-400 mb-4">
                         Remember It, Log It!
@@ -242,9 +242,9 @@
                     <div>
                         <h4 class="text-lg font-semibold mb-4">법적 고지</h4>
                         <ul class="space-y-2 text-gray-400">
-                            <li><a href="https://www.rilo.life/terms-of-service.html" class="hover:text-white transition-colors">서비스 이용약관</a></li>
-                            <li><a href="https://www.rilo.life/privacy-policy.html" class="hover:text-white transition-colors">개인정보처리방침</a></li>
-                            <li><a href="https://www.rilo.life/location-terms.html" class="hover:text-white transition-colors">위치기반서비스 이용약관</a></li>
+                            <li><a href="../terms-of-service.html" class="hover:text-white transition-colors">서비스 이용약관</a></li>
+                            <li><a href="../privacy-policy.html" class="hover:text-white transition-colors">개인정보처리방침</a></li>
+                            <li><a href="../location-terms.html" class="hover:text-white transition-colors">위치기반서비스 이용약관</a></li>
                         </ul>
                     </div>
                 </div>
@@ -271,13 +271,17 @@
 
             // Korean button click
             korBtn.addEventListener('click', function() {
-                // 이미 한글 페이지이므로 아무 동작도 하지 않음
+                // Already on Korean page, just update visual state
+                korBtn.classList.remove('inactive');
+                korBtn.classList.add('active');
+                engBtn.classList.remove('active');
+                engBtn.classList.add('inactive');
             });
 
             // English button click
             engBtn.addEventListener('click', function() {
                 // Navigate to English page
-                window.location.href = 'index.html?t=' + new Date().getTime();
+                window.location.href = '/';
             });
         });
     </script>
